Header + 4 sezioni main
niente dettagli

--- a/index.html
+++ b/index.html
@@ -135,6 +135,68 @@
         </div>
       </div>
       <!-- Fourth Frame -->
+      <div class="fourth_frame">
+        <div class="fourth_mini">
+          <div class="fourth_text">
+            <h2>Learn and grow with award-winning support and a thriving community behind you.</h2>
+            <p>You don't have to do it alone. Master the ibbound methodology and get the most out of your tools with HubSpot's legendary customer support team and a community of thousands of marketing and sales pros just like you.</p>
+          </div>
+          <div class="fourth_box_container">
+            <div class="box_row_up">
+              <div class="mini_box">
+                <img  class="box_image" src="" alt="">
+                <h1>150+</h1>
+                <span>HubSpot user groups</span>
+              </div>
+              <div class="mini_box">
+                <img  class="box_image" src="" alt="">
+                <h1>150+</h1>
+                <span>HubSpot user groups</span>
+              </div>
+              <div class="mini_box">
+                <img  class="box_image" src="" alt="">
+                <h1>150+</h1>
+                <span>HubSpot user groups</span>
+              </div>
+              <div class="mini_box">
+                <img  class="box_image" src="" alt="">
+                <h1>150+</h1>
+                <span>HubSpot user groups</span>
+              </div>
+            </div>
+            <div class="box_row_down">
+              <div class="mini_box">
+                <img  class="box_image" src="" alt="">
+                <h1>150+</h1>
+                <span>HubSpot user groups</span>
+              </div>
+              <div class="mini_box">
+                <img  class="box_image" src="" alt="">
+                <h1>150+</h1>
+                <span>HubSpot user groups</span>
+              </div>
+              <div class="mini_box">
+                <img  class="box_image" src="" alt="">
+                <h1>150+</h1>
+                <span>HubSpot user groups</span>
+              </div>
+              <div class="mini_box">
+                <img  class="box_image" src="" alt="">
+                <h1>150+</h1>
+                <span>HubSpot user groups</span>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- Fifth Frame -->
+      <div class="fifth_frame">
+        <div class="fifth_mini">
+
+        </div>
+
+      </div>
+
     </main>
 
     <!-- Footer -->
