Struttura completa senza dettagli

--- a/index.html
+++ b/index.html
@@ -78,9 +78,9 @@
             customers. Yes, it's 100% freee. Forever.</p>
             <h4>POPOLAR FEATURE</h4>
             <ul>
-              <li class="horizontal"><a href="#">Contact Insight</a></li>
-              <li class="horizontal"><a href="#">Deals</a></li>
-              <li class="horizontal"><a href="#">Task</a></li>
+              <li class="horizontal"><a class="blue_shade" href="#">Contact Insight</a></li>
+              <li class="horizontal"><a class="blue_shade" href="#">Deals</a></li>
+              <li class="horizontal"><a class="blue_shade" href="#">Task</a></li>
             </ul>
 
           </div>
@@ -150,40 +150,40 @@
               </div>
               <div class="mini_box">
                 <img  class="box_image" src="" alt="">
-                <h1>150+</h1>
-                <span>HubSpot user groups</span>
+                <h1>4,5M+</h1>
+                <span>monthly visit</span>
               </div>
               <div class="mini_box">
                 <img  class="box_image" src="" alt="">
-                <h1>150+</h1>
-                <span>HubSpot user groups</span>
+                <h1>155k+</h1>
+                <span>certified professionals</span>
               </div>
               <div class="mini_box">
                 <img  class="box_image" src="" alt="">
-                <h1>150+</h1>
-                <span>HubSpot user groups</span>
+                <h1>21k+</h1>
+                <span>registered attendees</span>
               </div>
             </div>
             <div class="box_row_down">
               <div class="mini_box">
                 <img  class="box_image" src="" alt="">
-                <h1>150+</h1>
-                <span>HubSpot user groups</span>
+                <h1>200+</h1>
+                <span>integrations</span>
               </div>
               <div class="mini_box">
                 <img  class="box_image" src="" alt="">
-                <h1>150+</h1>
-                <span>HubSpot user groups</span>
+                <h1>6+</h1>
+                <span>languages</span>
               </div>
               <div class="mini_box">
                 <img  class="box_image" src="" alt="">
-                <h1>150+</h1>
-                <span>HubSpot user groups</span>
+                <h1>2.6+M</h1>
+                <span>social followers</span>
               </div>
               <div class="mini_box">
                 <img  class="box_image" src="" alt="">
-                <h1>150+</h1>
-                <span>HubSpot user groups</span>
+                <h1>5k+</h1>
+                <span>profiles and counting</span>
               </div>
             </div>
           </div>
@@ -192,16 +192,105 @@
       <!-- Fifth Frame -->
       <div class="fifth_frame">
         <div class="fifth_mini">
-
+          <div class="upper_frame">
+            <div class="left_upframe frame_column">
+              <h1>64,500</h1>
+              <p>customers in over <span>100</span> countries growing their business with HubSpot</p>
+            </div>
+            <div class="right_upframe frame_column">
+              <img class="partners_imgs"src="" alt="">
+              <img class="partners_imgs"src="" alt="">
+              <img class="partners_imgs"src="" alt="">
+              <img class="partners_imgs"src="" alt="">
+              <img class="partners_imgs"src="" alt="">
+              <img class="partners_imgs"src="" alt="">
+              <img class="partners_imgs"src="" alt="">
+              <img class="partners_imgs"src="" alt="">
+            </div>
+          </div>
+          <div class="lower_frame">
+            <div class="left_downframe frame_column">
+              <h1>Start Growing With HubSpot Today</h1>
+              <p>With tools to make every parth of your process more human and a support team excited to help you, getting started with inbound has never been easier.</p>
+              <a class="orange_button" href="#">GetHubSpotFree</a>
+              <div class="mini_trial">Get started with FREE tools, or get more with our premium software.</div>
+            </div>
+            <div class="right_downframe frame_column">
+              <img src="img/woman.webp" alt="">
+            </div>
+          </div>
         </div>
-
       </div>
-
     </main>
 
     <!-- Footer -->
     <footer>
+      <div class="footer_upcontainer">
+        <div class="footer_column">
+          <h4>Increase Your Traffic</h4>
+          <ul>
+            <li><a href="#">Ad Software</a></li>
+            <li><a href="#">Blog Software</a></li>
+            <li><a href="#">SEO Software</a></li>
+            <li><a href="#">Social Media Software</a></li>
+            <li><a href="#">Content Management System</a></li>
+          </ul>
+        </div>
+        <div class="footer_column">
+          <h4>Connect With Leads</h4>
+          <ul>
+            <li><a href="#">find new prospects</a></li>
+            <li><a href="#">email tracking</a></li>
+            <li><a href="#">sales email template</a></li>
+            <li><a href="#">click to call your leads</a></li>
+            <li><a href="#">email marketing</a></li>
+          </ul>
+        </div>
+        <div class="footer_column">
+          <h4>Close and Manage Leads</h4>
+          <ul>
+            <li><a href="#">document tracking tool</a></li>
+            <li><a href="#">meeting schedule tool</a></li>
+            <li><a href="#">sales automation tool</a></li>
+            <li><a href="#">lead managment tool</a></li>
+            <li><a href="#">pipeline managment tool</a></li>
+          </ul>
+        </div>
+        <div class="footer_column">
+          <h4>Support and tools</h4>
+          <ul>
+            <li><a href="#">HubSpot partners</a></li>
+            <li><a href="#">Join a local user group</a></li>
+            <li><a href="#">get a free website report</a></li>
+            <li><a href="#">hubspot templates</a></li>
+            <li><a href="#">Free Tools & Generations</a></li>
+            <li><a class="white_button"href="#">Contac HubSpot Support</a></li>
+            <li><a href="#">F</a><a href="#"> I</a><a href="#"> Y</a><a href="#"> T</a><a href="#"> L</a></li>
+          </ul>
+        </div>
+        <div class="footer_midlayer">
+          <ul>
+            <li class="horizontal"><a href="#">English</a></li>
+            <li class="horizontal"><a href="#">Deutesch</a></li>
+            <li class="horizontal"><a href="#">日本人</a></li>
+            <li class="horizontal"><a href="#">Español</a></li>
+            <li class="horizontal"><a href="#">Português</a></li>
+            <li class="horizontal"><a href="#">Français</a></li>
 
+          </ul>
+
+        </div>
+        <div class="footer_basecontainer">
+          <div class="basecontainer_left">
+            <h2>HubSpot</h2>
+            <h4>Copyright &COPY; HubSpot, inc.</h4>
+          </div>
+          <ul>
+            <li class="horizontal">Legal Stuff<a href="#"></a></li>
+            <li class="horizontal">Privacy Policy<a href="#"></a></li>
+          </ul>
+        </div>
+      </div>
     </footer>
 
   </body>
