Finito con dettagli, codice da pulire

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <!-- Fixed Navigator -->
     <div class="fixed_container">
-      <nav>
+      <nav class="clearfix">
         <ul>
           <li class="horizontal"><a class="blue_shade" href="#"><i class="fas fa-globe-europe"></i> English <i class="fas fa-chevron-down"> </i></a></li>
           <li class="blue_shade horizontal"> | </li>
@@ -69,7 +69,7 @@
       <!-- Second Frame -->
       <div class="second_frame">
 
-        <div class="second_mini">
+        <div class="second_mini clearfix">
 
           <div class="left_second">
             <img class="upper_imgs"src="img/illustrations.svg" alt="Book">
@@ -92,11 +92,11 @@
       </div>
       <!-- Third Frame -->
       <div class="third_frame">
-        <div class="third_mini">
+        <div class="third_mini clearfix">
           <div class="left column">
             <div class="upper_imgs" src="img/markhub.svg" id="Marketing_Hub"></div>
             <h3>Mrketing Hub</h3>
-            <p>Marketing software to help you grow traffic, convert more visitors, and run complete inbound
+            <p>Marketing software to help grow traffic, convert more visitors, and run complete inbound
              marketing campaings at scale</p>
              <h5>POPOLAR FEATURE</h5>
              <ul>
@@ -136,7 +136,7 @@
       </div>
       <!-- Fourth Frame -->
       <div class="fourth_frame">
-        <div class="fourth_mini">
+        <div class="fourth_mini clearfix">
           <div class="fourth_text">
             <h2>Learn and grow with award-winning support and a thriving community behind you.</h2>
             <p>You don't have to do it alone. Master the ibbound methodology and get the most out of your tools with HubSpot's legendary customer support team and a community of thousands of marketing and sales pros just like you.</p>
@@ -193,7 +193,7 @@
       <!-- Fifth Frame -->
       <div class="fifth_frame">
         <div class="fifth_mini">
-          <div class="upper_frame">
+          <div class="upper_frame clearfix">
             <div class="left_upframe frame_column">
               <h1>64,500</h1>
               <p>customers in over <span>100</span> countries growing their business with HubSpot</p>
@@ -209,7 +209,7 @@
               <div class="partners_imgs"src="img/monkey.svg" id="Monkey_Logo"></div>
             </div>
           </div>
-          <div class="lower_frame">
+          <div class="lower_frame clearfix">
             <div class="left_downframe frame_column">
               <h1>Start Growing With HubSpot Today</h1>
               <p>With tools to make every parth of your process more human and a support team excited to help you, getting started with inbound has never been easier.</p>
@@ -226,7 +226,7 @@
 
     <!-- Footer -->
     <footer>
-      <div class="footer_upcontainer">
+      <div class="footer_upcontainer clearifx">
         <div class="footer_column">
           <h4>Increase Your Traffic</h4>
           <ul>
@@ -281,7 +281,7 @@
           </ul>
 
         </div>
-        <div class="footer_basecontainer">
+        <div class="footer_basecontainer clearfix">
           <div class="basecontainer_left">
             <img src="img/hubspotwhite.svg" alt="White Logo"></img>
             <h4>Copyright &COPY; HubSpot, inc.</h4>
