--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="css/master.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic&family=Nunito+Sans:wght@400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w==" crossorigin="anonymous" />
     <title>Hubspot</title>
   </head>
@@ -12,12 +12,12 @@
     <!-- Fixed Navigator -->
     <div class="fixed_container">
       <nav class="clearfix">
-        <ul>
+        <ul class="float_left">
           <li class="horizontal"><a class="blue_shade" href="#"><i class="fas fa-globe-europe"></i> English <i class="fas fa-chevron-down"> </i></a></li>
           <li class="blue_shade horizontal"> | </li>
           <li class="horizontal"><a class="blue_shade" href="#">Contact Us</a></li>
         </ul>
-        <ul>
+        <ul class="float_right">
           <li class="horizontal"><a href="#"><i class="fas fa-search"></i></a></li>
           <li class="horizontal"><a href="#">Log in</a></li>
           <li class="horizontal"><a class="orange_button" href="#">GetHubSpotFree</a></li>
@@ -28,9 +28,9 @@
 
     <!-- Header -->
     <header>
-      <nav class="header_nav">
-        <img src="img/logo.svg" alt="Logo">
-        <ul>
+      <nav class="clearfix">
+        <img class="float_left" src="img/logo.svg" alt="Logo">
+        <ul class="float_right">
           <li class="horizontal"><a class="blue_shade" href="#">Software<i class="fas fa-chevron-down"></i></a></li>
           <li class="horizontal"><a class="blue_shade" href="#">Pricing</a></li>
           <li class="horizontal"><a class="blue_shade" href="#">Resources<i class="fas fa-chevron-down"></i></a></li>
@@ -71,12 +71,12 @@
 
         <div class="second_mini clearfix">
 
-          <div class="left_second">
+          <div class="left_second float_left">
             <img class="upper_imgs"src="img/illustrations.svg" alt="Book">
-            <a class="orange_button" href="#">Learn More</a>
+            <a class="orange_button horizontal" href="#">Learn More</a>
           </div>
 
-          <div class="right_second">
+          <div class="right_second float_left">
             <h3>Free HubSpot CRM</h3>
             <p>Everything you need to organize, track, and build better relationships with leads and
             customers. Yes, it's 100% freee. Forever.</p>
@@ -93,10 +93,10 @@
       <!-- Third Frame -->
       <div class="third_frame">
         <div class="third_mini clearfix">
-          <div class="left column">
+          <div class="left column float_left">
             <div class="upper_imgs" src="img/markhub.svg" id="Marketing_Hub"></div>
             <h3>Mrketing Hub</h3>
-            <p>Marketing software to help grow traffic, convert more visitors, and run complete inbound
+            <p>Marketing software to help you grow traffic, convert more visitors, and run complete inbound
              marketing campaings at scale</p>
              <h5>POPOLAR FEATURE</h5>
              <ul>
@@ -107,7 +107,7 @@
              <a class="orange_button" href="#">Learn More</a>
           </div>
 
-          <div class="center column">
+          <div class="center column float_left">
             <div class="upper_imgs" src="img/proillustration.svg" id="Sales_Hub"></div>
             <h3>Sales Hub</h3>
             <p>Time-saving sales software that helps you get deeper insights into prospects, automate the task you hate, and close more deals faster.</p>
@@ -120,7 +120,7 @@
              <a class="orange_button" href="#">Learn More</a>
           </div>
 
-          <div class="right column">
+          <div class="right column float_left">
             <div class="upper_imgs" src="img/table.svg" id="Service_Hub"></div>
             <h3>Service Hub</h3>
             <p>Customer Service software to help you connect with customers, exceed expectations, and turn them into promotes that grow your business.</p>
@@ -143,22 +143,22 @@
           </div>
           <div class="fourth_box_container">
             <div class="box_row_up">
-              <div class="mini_box">
+              <div class="mini_box float_left">
                 <div class="box_image" id="hands"></div>
                 <h1>150+</h1>
                 <span>HubSpot user groups</span>
               </div>
-              <div class="mini_box">
+              <div class="mini_box float_left">
                 <div  class="box_image" id="blogs"></div>
                 <h1>4,5M+</h1>
                 <span>monthly visit</span>
               </div>
-              <div class="mini_box">
+              <div class="mini_box float_left">
                 <div  class="box_image" id="academy"></div>
                 <h1>155k+</h1>
                 <span>certified professionals</span>
               </div>
-              <div class="mini_box">
+              <div class="mini_box float_left">
                 <div  class="box_image" id="inbound"></div>
                 <h1>21k+</h1>
                 <span>registered attendees</span>
@@ -166,22 +166,22 @@
             </div>
 
             <div class="box_row_down">
-              <div class="mini_box">
+              <div class="mini_box float_left">
                 <div  class="box_image" id="connect"></div>
                 <h1>200+</h1>
                 <span>integrations</span>
               </div>
-              <div class="mini_box">
+              <div class="mini_box float_left">
                 <div  class="box_image" id="world"></div>
                 <h1>6+</h1>
                 <span>languages</span>
               </div>
-              <div class="mini_box">
+              <div class="mini_box float_left">
                 <div  class="box_image" id="chat"></div>
                 <h1>2.6+M</h1>
                 <span>social followers</span>
               </div>
-              <div class="mini_box">
+              <div class="mini_box float_left">
                 <div class="box_image" id="growthub"></div>
                 <h1>5k+</h1>
                 <span>profiles and counting</span>
@@ -194,29 +194,29 @@
       <div class="fifth_frame">
         <div class="fifth_mini">
           <div class="upper_frame clearfix">
-            <div class="left_upframe frame_column">
+            <div class="left_upframe float_left">
               <h1>64,500</h1>
               <p>customers in over <span>100</span> countries growing their business with HubSpot</p>
             </div>
-            <div class="right_upframe frame_column">
-              <div class="partners_imgs"src="img/soundcloud.webp" id="Sound_Cloud"></div>
-              <div class="partners_imgs"src="img/wwf.webp" id="WWF_Logo"></div>
-              <div class="partners_imgs"src="img/trello.webp" id="Trello_Logo"></div>
-              <div class="partners_imgs"src="img/vmware.webp" id="Vmware_Logo"></div>
-              <div class="partners_imgs"src="img/g2.webp" id="G2_Logo"></div>
-              <div class="partners_imgs"src="img/classpass.webp" id="Class_Pass"></div>
-              <div class="partners_imgs"src="img/subaru.webp" id="Subaru_Logo"></div>
-              <div class="partners_imgs"src="img/monkey.svg" id="Monkey_Logo"></div>
+            <div class="right_upframe float_left">
+              <div class="partners_imgs float_left" id="Sound_Cloud"></div>
+              <div class="partners_imgs float_left" id="WWF_Logo"></div>
+              <div class="partners_imgs float_left" id="Trello_Logo"></div>
+              <div class="partners_imgs float_left" id="Vmware_Logo"></div>
+              <div class="partners_imgs float_left" id="G2_Logo"></div>
+              <div class="partners_imgs float_left" id="Class_Pass"></div>
+              <div class="partners_imgs float_left" id="Subaru_Logo"></div>
+              <div class="partners_imgs float_left" id="Monkey_Logo"></div>
             </div>
           </div>
           <div class="lower_frame clearfix">
-            <div class="left_downframe frame_column">
+            <div class="left_downframe float_left">
               <h1>Start Growing With HubSpot Today</h1>
               <p>With tools to make every parth of your process more human and a support team excited to help you, getting started with inbound has never been easier.</p>
               <a class="orange_button" href="#">GetHubSpotFree</a>
               <div class="mini_trial">Get started with FREE tools, or get more with our premium software.</div>
             </div>
-            <div class="right_downframe frame_column">
+            <div class="right_downframe float_left">
               <img src="img/woman.webp" alt="">
             </div>
           </div>
@@ -227,7 +227,7 @@
     <!-- Footer -->
     <footer>
       <div class="footer_upcontainer clearifx">
-        <div class="footer_column">
+        <div class="footer_column float_left">
           <h4>Increase Your Traffic</h4>
           <ul>
             <li><a href="#">Ad Software</a></li>
@@ -237,7 +237,7 @@
             <li><a href="#">Content Management System</a></li>
           </ul>
         </div>
-        <div class="footer_column">
+        <div class="footer_column float_left">
           <h4>Connect With Leads</h4>
           <ul>
             <li><a href="#">find new prospects</a></li>
@@ -247,7 +247,7 @@
             <li><a href="#">email marketing</a></li>
           </ul>
         </div>
-        <div class="footer_column">
+        <div class="footer_column float_left">
           <h4>Close and Manage Leads</h4>
           <ul>
             <li><a href="#">document tracking tool</a></li>
@@ -257,7 +257,7 @@
             <li><a href="#">pipeline managment tool</a></li>
           </ul>
         </div>
-        <div class="footer_column">
+        <div class="footer_column float_left">
           <h4>Support and tools</h4>
           <ul>
             <li><a href="#">HubSpot partners</a></li>
@@ -282,11 +282,11 @@
 
         </div>
         <div class="footer_basecontainer clearfix">
-          <div class="basecontainer_left">
+          <div class="basecontainer_left float_left">
             <img src="img/hubspotwhite.svg" alt="White Logo"></img>
             <h4>Copyright &COPY; HubSpot, inc.</h4>
           </div>
-          <ul>
+          <ul class="float_right">
             <li class="horizontal"><a href="#">Legal Stuff</a></li>
             <li class="horizontal">Privacy Policy<a href="#"></a></li>
           </ul>
